--- a/views/artist-profile-page.handlebars
+++ b/views/artist-profile-page.handlebars
@@ -29,13 +29,13 @@
               </p>
             <div class="artwork-container">
               <img src="../../images/painting-sample.jpg" alt="Oil Painting">
-              <a href="/login" class="update-link"><button class="update-profile-button" id="update-from-profile">Update My Profile</button></a>
+              <a href="/update-profile" class="update-link"><button class="update-profile-button" id="update-from-profile">Update My Profile</button></a>
             </div>
         </div>
         </div>
         <div class="comments-heading-container" id="leave-comment">
         <h2 class="comments-heading" id="comments-title">Comments:</h2>
-        <a href="/login" class="leave-comment-link"><button class="leave-comment-button">Leave Comment</button></a>
+        <a href="/add-comments" class="leave-comment-link">Leave Comment</a>
         </div>
 
         <div class="profile-comments-container">
