--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
               <li><a href="/">Home</a></li>
               <li><a href="/artists">Artists</a></li>
               <li><a href="/login">Login</a></li>
-              <li id="logout"><a href="/">Logout</a></li>
+              <li id="logout"><a href="/logout">Logout</a></li>
             </ul>
           </nav>
         </div>
@@ -35,9 +35,9 @@
       </div>
       {{!-- MAIN CONTENT END --}}
 
-      <footer>
+      {{!-- <footer>
         Thank you for visiting Art Garage!
-      </footer>
+      </footer> --}}
 
   </body>
 </html>
