--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -146,7 +146,7 @@ ul {
 
 .artwork-image {
   max-width: 200px;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .artist-info {
@@ -707,6 +707,16 @@ footer {
   .artist-signup {
     margin-right: 15px;
   }
+
+  .feature-artist-container {
+    flex-direction: column;
+  }
+
+  .artwork-image {
+    max-width: 100%;
+    height: 350px;
+    width: 100%
+  }
 }
 
 
@@ -755,6 +765,7 @@ footer {
   .artist-signup {
     margin-bottom: 15px;
   }
+
 }
 
 
@@ -762,7 +773,7 @@ footer {
 @media screen and (max-width: 575px) {
   #content-container {
     position: relative;
-  flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
   .welcome-column {
