--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,7 +11,7 @@
               <div class="artist-info">
                 <h2 class="artist-name">Jonathan Franklin</h2>
                 <p class="artist-bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, alias consequatur eius facere blanditiis hic, pariatur perspiciatis labore asperiores dolorem beatae repellat earum inventore placeat nobis expedita? Porro ducimus iusto tenetur harum consequatur fugiat.</p>
-                <a href="/bio"><h2 class="view-profile">View full profile <span class="arrow">&#11136</span></h2></a>
+                <a href="/profile/1"><h2 class="view-profile">View full profile <span class="arrow">&#11136</span></h2></a>
               </div>
             </div>
           </div>
@@ -22,8 +22,8 @@
               <p class="about-us">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, totam ratione temporibus explicabo adipisci repellat aperiam alias voluptate soluta. Voluptates veniam incidunt architecto iure fuga placeat facilis provident, odio eius itaque earum exercitationem maiores expedita quaerat adipisci repellendus voluptatibus natus dignissimos ratione. Autem adipisci, omnis recusandae doloribus laboriosam sit vitae soluta, voluptatum veniam quod nihil vel. Suscipit, nihil hic. Impedit quae numquam recusandae molestiae voluptates sapiente maiores tempora.</p>
             </div>
               <div class="signup-options">
-                <button type="submit" class="artist-signup">Artist Signup</button>
-                <button type="submit" class="buyer-signup">Buyer Signup</button>
+                <a href="/signup?type=artist" class="artist-signup">Artist Signup</a>
+                <a href="/signup?type=buyer" class="buyer-signup">Buyer Signup</a>
               </div>
             </div>  
           </div>
