--- a/views/artist-profile-page.handlebars
+++ b/views/artist-profile-page.handlebars
@@ -1,12 +1,13 @@
 <div class="artist-profile-container">
         <div class="profile-container">
 
-          <h1 class="artist-name" id="artist-name">Jonathan Franklin</h1>
+          <h1 class="profile-artist-name">Louis Escobedo</h1>
 
           <h2 class="profile-heading">Website:</h2>
-          <a href="https://www.fineartist.com" id="url-link">www.JonathanFranklin.com</a>
+          <a href="https://www.louisescobedo.com/" target="blank" id="url-link">www.LouisEscobedo.com</a>
 
-          <p id="full-profile-bio">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, earum nesciunt explicabo vero voluptatum facere corporis dicta voluptate soluta. Corporis optio quos ea sit autem deserunt saepe molestias, quis dolorem ipsam consequatur suscipit ex quam? Minima dicta tempora consectetur eligendi tenetur natus veniam odit deserunt temporibus, rem similique labore expedita, repellendus enim repellat ad! Beatae nisi reprehenderit tempora repudiandae fuga magni quam officia itaque voluptas possimus rerum iusto, placeat eos eveniet aliquid praesentium perspiciatis at reiciendis fugit. Ipsum blanditiis voluptatum commodi dicta dignissimos, consequatur iusto doloribus quis illum sapiente distinctio, animi delectus aliquid optio, nisi maxime veniam itaque. Quam quidem quis deleniti itaque rerum. Doloribus odit corporis numquam a tenetur nostrum iure commodi enim esse accusamus in quia, illo rerum molestiae perferendis consequatur quibusdam qui mollitia sapiente sit quasi expedita laboriosam odio nam? Rem, sequi. Ullam recusandae ratione harum maxime sit. Ullam, obcaecati quidem tempore repellat repudiandae natus debitis omnis!
+          <p id="full-profile-bio">Louis Escobedo was born in Sweetwater, Texas, and received a BFA in Advertising Art from Sam Houston State University in Huntsville, Texas. He began his painting career at age 6 when he won the best of show in his elementary school in Sweetwater Texas.  In 1974, after graduation from college he began his career as an artist honing his talents to become a freelance illustrator in Texas. In 1979, he finally achieved his goal. During his time as an illustrator, he received a gold medal from the Society of Illustrators in New York in 1981 and many other awards from many organizations such as the Dallas Texas Visual Society.  Louis and Yolanda currently reside in Santa Fe New Mexico.
+          In 1985, he shifted his professional focus, moving from illustration to fine art. In 1990, Louis and his wife, Yolanda, moved to Denver, Colorado. During his fine art career, Louis exhibited in many galleries across the United States, including California, Colorado, Oklahoma, Texas, Illinois, Virginia, and Maryland. In 1994, Louis was awarded his first Gold Medal from the National Oil Painters of America (OPA) and received his second one with a $25,000 award in 2014.  He is one of only two artists receiving this prestigious award twice from this 27-year-old organization. In 2019 Louis received the Master Signature status in Oil Painters of America based on his mastery of oil painting and accomplishments in the world of representational art.
           </p>
 
           <div class="descriptors">
@@ -25,7 +26,7 @@
           </div>
 
               <h2 class="profile-heading">Artwork Description:</h2>
-              <p id="artwork-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, earum nesciunt explicabo vero voluptatum facere corporis dicta voluptate soluta. Corporis optio quos ea sit autem deserunt saepe molestias, quis dolorem ipsam consequatur suscipit ex quam? Minima dicta tempora.
+              <p id="artwork-description">Let the wind blow and sing its songs to stir the emotions, let it bring the sweet memories of times gone and hopes for a good future ahead. Let the wind remind us that we are here in this present moment, in the gift of living, and call us to adore those whom are close and give their days to us
               </p>
             <div class="artwork-container">
               <img src="../../images/painting-sample.jpg" alt="Oil Painting">
@@ -40,9 +41,9 @@
 
         <div class="profile-comments-container">
           <div class="comments-container">
-            <h3 class="comment-title">I love this artists' style of painting!</h3>
+            <h3 class="comment-title">I love this artist and his style of painting!</h3>
             <p id="comments" class="buyer-comments">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, earum nesciunt explicabo vero voluptatum facere corporis dicta voluptate soluta.
+              This painting reminds me of when I was a child visiting my grandparents. This really takes me back and I just might put in an offer for the painting!
             </p>
           </div>
         </div>
