--- a/views/artist-update-page.handlebars
+++ b/views/artist-update-page.handlebars
@@ -49,9 +49,9 @@
             <!-- SAMPLE FORM -->
             
             <div class="artist-update-container">
-              <a href="/login" class="update-link"><button class="artist-update-profile-button">Update Profile</button></a>
-              <a href="/login" class="view-link"><button class="artist-view-profile-button">View Profile</button></a>
-              <a href="/login" class="delete-link"><button class="artist-delete-profile-button">Delete Profile</button></a>
+              <a href="/profile/1" class="artist-update-profile-button">Update Profile</a>
+              <a href="/profile/1" class="artist-view-profile-button">View Profile</a>
+              <a href="/" class="artist-delete-profile-button">Delete Profile</a>
             </div>
             </div>
         </form>
