--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,29 @@
-;
+     {{!-- This container holds both columns: --}}
+        <div class="content-row-container">
+          {{!-- This column holds the artwork thumbnail and artist info container: --}}
+          <div class="artist-column">
+            <div class="feature-artist-container">
+              {{!-- This container holds the img/artwork thumbnail: --}}
+              <div class="artwork-container">
+                <img class="artwork-image" src="../../images/painting-sample.jpg" alt="nature oil paiting">
+              </div>
+              {{!-- This container holds the artist name, short bio snippet and link to profile: --}}
+              <div class="artist-info">
+                <h2 class="artist-name">Louis Escobedo</h2>
+                <p class="artist-bio">Color is a person’s signature, a personal form of expression and another sense an artist can use to communicate.  I intermingle abstract shapes and color to energize my subjects, which include landscapes, still lifes, and figures. Sometimes I have to watch myself and not use color as a crutch. Color are my kids, you have to watch your values before they can come out to play.</p>
+                <a href="/profile/1"><h2 class="view-profile">View full profile <span class="arrow">&#11136</span></h2></a>
+              </div>
+            </div>
+          </div>
+          {{!-- This column holds the website heading, about info and signup options: --}}
+          <div class="welcome-column">
+            <div class="intro">
+              <h1 class="welcome-headline">The place that brings artists and potential buyers together.</h1>
+              <p class="about-us">Here at Art Garage we want to connect artists with potential buyers who are passionate about art. Artists are able to create a profile by introducing themselves by creating a profiling with their name, website link, a bio describing who they are as an artist and uploading a specific piece of artwork that they have to offer up for sale. If you're a potential buyer and you like a specific artist or piece of artwork you can leave a comment for everyone to read. You can even contact the artist by going to their personal website and sending them an email. Use the signup buttons below to create an account. Welcome to the Art Garage!</p>
+            </div>
+              <div class="signup-options" id="homepage-signup-container">
+                <a href="/signup?type=artist" class="artist-signup-button">Artist Signup</a>
+                <a href="/signup?type=buyer" class="buyer-signup-button">Buyer Signup</a>
+              </div>
+            </div>  
+          </div>
