--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <title>Art Garage</title>
     <link rel="stylesheet" href="../../style.css" />
     <link rel="icon" type="image/x-icon" href="../../images/am52r-bb94x-001.ico">
+    <link href="/stylesheets/star-rating.css" rel="stylesheet">
   </head>
   <body>
 
@@ -38,6 +39,11 @@
       <footer>
         Thank you for visiting Art Garage!
       </footer>
+
+<script src="js/star-rating.min.js"></script>
+<script>
+    var stars = new StarRating('.star-rating');
+</script>
 
   </body>
 </html>
