comment out index.js, update readme

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -34,7 +34,7 @@
       <option value="1">Terrible</option>
     </select> --}}
 
-    <script src="/javascript/star-rating-min.js"></script>
+    <script src="/javascript/star-rating.min.js"></script>
     <script>
       var stars = new StarRating('.star-rating');
     </script>
