--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Art Garage</title>
-    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <link
       rel="icon"
       type="image/x-icon"
@@ -29,7 +29,7 @@
               <li><a href="/">Home</a></li>
               <li><a href="/artists">Artists</a></li>
               <li><a href="/login">Login</a></li>
-              <li id="logout"><a href="/">Logout</a></li>
+              <li id="logout"><a href="/logout">Logout</a></li>
             </ul>
           </nav>
         </div>
@@ -43,9 +43,9 @@
     </div>
     {{! MAIN CONTENT END }}
 
-    <footer>
-      Thank you for visiting Art Garage!
-    </footer>
+    {{! <footer>
+        Thank you for visiting Art Garage!
+      </footer> }}
 
   </body>
 </html>
