--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,5 +1,5 @@
-<section class="card">
-  <a href="/gallery/{{id}}">
+<section class="star-rating">
+  <a href="/profile/{{id}}">
 
     <header>{{name}}</header>
     <img src="/images/{{paintings.[0].filename}}" alt="{{paintings.[0].description}}">
