--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,47 +3,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Art Garage</title>
-    <link rel="stylesheet" href="../../style.css" />
-    <link rel="icon" type="image/x-icon" href="../../images/am52r-bb94x-001.ico">
-    <link href="/stylesheets/star-rating.css" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="icon" type="image/x-icon" href="../../images/am52r-bb94x-001.ico" />
+    <link href="stylesheets/star-rating.css" rel="stylesheet" />
   </head>
   <body>
 
     <div class="wrapper">
-      {{!-- HEADER START --}}
+      {{! HEADER START }}
       <header class="header-container">
         <div class="nav-container">
           <div class="logo">
-          <a href="/"><img src="../../images/art-garage-logo.png" alt="art garage logo" class="art-garage-logo"/></a>
+            <a href="/"><img
+                src="../../images/art-garage-logo.png"
+                alt="art garage logo"
+                class="art-garage-logo"
+              /></a>
           </div>
-          {{!-- NAV MENU START --}}
+          {{! NAV MENU START }}
           <nav class="menu">
             <ul class="menu-items">
               <li><a href="/">Home</a></li>
               <li><a href="/artists">Artists</a></li>
               <li><a href="/login">Login</a></li>
-              <li id="logout"><a href="/">Logout</a></li>
+              <li id="logout"><a href="/logout">Logout</a></li>
             </ul>
           </nav>
         </div>
       </header>
-      {{!-- HEADER END --}}
+      {{! HEADER END }}
 
-      {{!-- MAIN CONTENT START --}}
+      {{! MAIN CONTENT START }}
       <main>
         {{{body}}}
       </main>
-      </div>
-      {{!-- MAIN CONTENT END --}}
+    </div>
+    {{! MAIN CONTENT END }}
 
-      <footer>
+    {{! <footer>
         Thank you for visiting Art Garage!
-      </footer>
-
-<script src="js/star-rating.min.js"></script>
+      </footer> }}
+<script src="javascript/star-rating.min.js"></script>
 <script>
-    var stars = new StarRating('.star-rating');
+  var stars = new StarRating('.star-rating');
 </script>
-
   </body>
 </html>
